refactor: 整理项目结构

--- a/pm1_sdk_2/CMakeLists.txt
+++ b/pm1_sdk_2/CMakeLists.txt
@@ -2,10 +2,14 @@
 
 add_library(kernel
 	src/serial_port/serial_port_t.hh
-	src/serial_port/serial_ports_linux.cpp
 	src/serial_port/serial_port_t_linux.cc
 	src/serial_port/serial_port_t_win32.cc
 )
 
-add_executable(pm1_driver_win32 "app/pm1_driver_win32.cpp")
-target_link_libraries(pm1_driver_win32 kernel)
+if(WIN32)
+	add_executable(pm1_driver_win32 "app/pm1_driver_win32.cpp")
+	target_link_libraries(pm1_driver_win32 kernel)
+elseif(UNIX)
+	add_executable(pm1_driver_linux "app/pm1_driver_linux.cpp")
+	target_link_libraries(pm1_driver_linux kernel)
+endif()
