todo(chassis): 添加串口发送的实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ add_library(kernel
         src/autocan/pm1.h
         src/autocan/parse.cpp
 
+        src/chassis_t.hh
+        src/chassis_t.cc
+
         src/serial_port/serial_port_t.hh
         src/serial_port/serial_port_t_linux.cc
         src/serial_port/serial_port_t_win32.cc
