build: 合并 g29 驱动到项目，并添加一个直接用方向盘控制车的测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_BUILD_TYPE Release)
 
 add_subdirectory(control_model)
+add_subdirectory(g29)
 
 find_package(Threads REQUIRED)
 
@@ -21,23 +22,30 @@ add_library(kernel
         src/chassis_model_t.cc)
 target_link_libraries(kernel control_model)
 
+add_library(app_common app/pm1_driver_common.h app/pm1_driver_common.cpp)
+target_link_libraries(app_common kernel ${CMAKE_THREAD_LIBS_INIT})
+
 if (WIN32)
-    add_executable(pm1_driver_win32 app/pm1_driver_win32.cpp
-            app/pm1_driver_common.h
-            app/pm1_driver_common.cpp)
-    target_link_libraries(pm1_driver_win32 kernel)
+    add_executable(pm1_driver_win32 app/pm1_driver_win32.cpp)
+    target_link_libraries(pm1_driver_win32 app_common)
 elseif (UNIX)
     find_package(Threads)
     EXECUTE_PROCESS(COMMAND uname -m OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE architecture)
+    add_executable(g29_test test/g29_display.cpp)
+    add_executable(pm1_g29_test test/pm1_with_g29.cpp)
     if(architecture STREQUAL "aarch64")
-        add_executable(pm1_driver_aarch64 app/pm1_driver_linux.cpp
-                app/pm1_driver_common.h
-                app/pm1_driver_common.cpp)
-        target_link_libraries(pm1_driver_aarch64 kernel ${CMAKE_THREAD_LIBS_INIT})
+        add_executable(pm1_driver_aarch64 app/pm1_driver_linux.cpp)
+        target_link_libraries(pm1_driver_aarch64 app_common)
+
+        target_link_libraries(g29_test g29_aarch64)
+        target_link_libraries(pm1_g29_test g29_aarch64 app_common)
     else()
         add_executable(pm1_driver_unix app/pm1_driver_linux.cpp
                 app/pm1_driver_common.h
                 app/pm1_driver_common.cpp)
-        target_link_libraries(pm1_driver_unix kernel ${CMAKE_THREAD_LIBS_INIT})
+        target_link_libraries(pm1_driver_unix app_common)
+
+        target_link_libraries(g29_test g29_unix)
+        target_link_libraries(pm1_g29_test g29_unix app_common)
     endif()
 endif ()
