build(control_model): 调整项目结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,8 @@ project(pm1_sdk_2 LANGUAGES CXX C)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_BUILD_TYPE Release)
 
-add_subdirectory(control_model)
-
-find_package(Threads REQUIRED)
+include_directories(src)
+add_subdirectory(src/control_model)
 
 add_library(kernel
         src/autocan/protocol.h
@@ -21,6 +20,7 @@ add_library(kernel
         src/chassis_model_t.cc)
 target_link_libraries(kernel control_model)
 
+find_package(Threads REQUIRED)
 add_library(app_common app/pm1_driver_common.h app/pm1_driver_common.cpp)
 target_link_libraries(app_common kernel ${CMAKE_THREAD_LIBS_INIT})
 
@@ -41,9 +41,7 @@ elseif (UNIX)
         target_link_libraries(g29_test g29_aarch64)
         target_link_libraries(pm1_g29_test g29_aarch64 app_common)
     else ()
-        add_executable(pm1_driver_unix app/pm1_driver_linux.cpp
-                app/pm1_driver_common.h
-                app/pm1_driver_common.cpp)
+        add_executable(pm1_driver_unix app/pm1_driver_linux.cpp)
         target_link_libraries(pm1_driver_unix app_common)
 
         target_link_libraries(g29_test g29_unix)
