refactor: 整理可执行文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,11 @@
 ﻿cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
 project(pm1_sdk_2 LANGUAGES CXX C)
-
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_BUILD_TYPE Release)
 
 include_directories(src)
 
-set(CONTROL_MODEL_SOURCE
+add_library(control_model
         src/control_model/pi.h
 
         src/control_model/model.h
@@ -21,9 +19,7 @@ set(CONTROL_MODEL_SOURCE
         src/control_model/optimization.h
         src/control_model/optimization.c)
 
-add_library(control_model ${CONTROL_MODEL_SOURCE})
-
-add_library(kernel
+add_library(pm1
         src/autocan/protocol.h
         src/autocan/pm1.h
         src/autocan/parse.cpp
@@ -33,48 +29,56 @@ add_library(kernel
 
         src/chassis_model_t.hh
         src/chassis_model_t.cc)
-target_link_libraries(kernel control_model)
+target_link_libraries(pm1 control_model)
 
 find_package(Threads REQUIRED)
-add_library(app_common app/pm1_driver_common.h app/pm1_driver_common.cpp)
-target_link_libraries(app_common kernel ${CMAKE_THREAD_LIBS_INIT})
 
 if (WIN32)
 
-    add_executable(pm1_driver_win32 app/pm1_driver_win32.cpp)
-    target_link_libraries(pm1_driver_win32 app_common)
-
 elseif (UNIX)
 
-    EXECUTE_PROCESS(COMMAND uname -m OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE architecture)
+# 云台舵机
 
-    add_executable(g29_test test/g29_display.cpp)
-    add_executable(pm1_g29_test test/pm1_with_g29.cpp)
+add_executable(servo_test test/servo_test.cpp
+        app/serial_linux.h
+        app/serial_linux.cpp)
 
-    add_executable(servo_test test/servo_test.cpp)
-    add_executable(pm1_with_udp app/pm1_with_udp.cpp)
-    add_executable(g29_with_udp app/g29_with_udp.cpp)
+# 罗技 g29
 
-    if (architecture STREQUAL "aarch64")
-        add_library(g29_aarch64 SHARED src/g29/steering_t.hh src/g29/steering_t.cc ${CONTROL_MODEL_SOURCE} src/odometry_t.hpp)
+add_library(g29
+        src/g29/steering_t.hh
+        src/g29/steering_t.cc)
+target_link_libraries(g29 control_model)
 
-        add_executable(pm1_driver_aarch64 app/pm1_driver_linux.cpp)
-        target_link_libraries(pm1_driver_aarch64 app_common)
+add_executable(g29_test test/g29_display.cpp)
+target_link_libraries(g29_test g29)
 
-        target_link_libraries(g29_test g29_aarch64)
-        target_link_libraries(pm1_g29_test g29_aarch64 app_common)
-        target_link_libraries(pm1_with_udp g29_aarch64 app_common)
-        target_link_libraries(g29_with_udp g29_aarch64 app_common)
-    else ()
-        add_library(g29_unix SHARED src/g29/steering_t.hh src/g29/steering_t.cc ${CONTROL_MODEL_SOURCE} src/odometry_t.hpp)
+add_executable(g29_with_udp app/g29_with_udp.cpp)
+target_link_libraries(g29_with_udp g29)
 
-        add_executable(pm1_driver_unix app/pm1_driver_linux.cpp)
-        target_link_libraries(pm1_driver_unix app_common)
+# PM1
 
-        target_link_libraries(g29_test g29_unix)
-        target_link_libraries(pm1_g29_test g29_unix app_common)
-        target_link_libraries(pm1_with_udp g29_unix app_common)
-        target_link_libraries(g29_with_udp g29_unix app_common)
-    endif ()
+add_library(pm1_linux
+        app/pm1_driver_common.h
+        app/pm1_driver_common_linux.cpp
+        app/serial_linux.h
+        app/serial_linux.cpp)
+target_link_libraries(pm1_linux pm1 ${CMAKE_THREAD_LIBS_INIT})
+
+add_executable(pm1_with_g29 test/pm1_with_g29.cpp)
+target_link_libraries(pm1_with_g29 pm1_linux g29)
+
+add_executable(pm1_with_console test/pm1_with_console.cpp)
+target_link_libraries(pm1_with_console pm1_linux)
+
+add_executable(pm1_with_udp app/pm1_with_udp.cpp)
+target_link_libraries(pm1_with_udp pm1_linux)
+
+# ---
+
+EXECUTE_PROCESS(COMMAND uname -m OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE architecture)
+if (architecture STREQUAL "aarch64")
+else ()
+endif ()
 
 endif ()
