build: 修改 CMakeLists，以支持以 std::iostream 为主的结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@
 
 project(pm1_sdk_2 LANGUAGES CXX C)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-include_directories(src)
+if (UNIX)
 
 add_library(control_model
         src/control_model/pi.h
@@ -33,31 +34,6 @@ target_link_libraries(pm1 control_model)
 
 find_package(Threads REQUIRED)
 
-if (WIN32)
-
-elseif (UNIX)
-
-# 云台舵机
-
-add_executable(servo_test test/servo_test.cpp
-        app/serial_linux.h
-        app/serial_linux.cpp)
-
-# 罗技 g29
-
-add_library(g29
-        src/g29/steering_t.hh
-        src/g29/steering_t.cc)
-target_link_libraries(g29 control_model)
-
-add_executable(g29_test test/g29_display.cpp)
-target_link_libraries(g29_test g29)
-
-add_executable(g29_with_udp app/g29_with_udp.cpp)
-target_link_libraries(g29_with_udp g29)
-
-# PM1
-
 add_library(pm1_linux
         app/pm1_driver_common.h
         app/pm1_driver_common_linux.cpp
@@ -65,20 +41,44 @@ add_library(pm1_linux
         app/serial_linux.cpp)
 target_link_libraries(pm1_linux pm1 ${CMAKE_THREAD_LIBS_INIT})
 
-add_executable(pm1_with_g29 test/pm1_with_g29.cpp)
-target_link_libraries(pm1_with_g29 pm1_linux g29)
-
-add_executable(pm1_with_console test/pm1_with_console.cpp)
-target_link_libraries(pm1_with_console pm1_linux)
-
-add_executable(pm1_with_udp app/pm1_with_udp.cpp)
-target_link_libraries(pm1_with_udp pm1_linux)
-
-# ---
+# 架构相关编译
 
 EXECUTE_PROCESS(COMMAND uname -m OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE architecture)
 if (architecture STREQUAL "aarch64")
+
+add_executable(pm1_console_aarch64 app/pm1_with_console.cpp)
+target_link_libraries(pm1_console_aarch64 pm1_linux)
+
 else ()
+
+# PM1
+
+add_executable(pm1_console_unix app/pm1_with_console.cpp)
+target_link_libraries(pm1_console_unix pm1_linux)
+
+# 罗技 g29
+
+add_library(g29 src/g29/steering_t.hh src/g29/steering_t.cc)
+target_link_libraries(g29 control_model)
+
+add_executable(g29_console_unix app/g29_console.cpp)
+target_link_libraries(g29_console_unix g29)
+
+# test
+
+add_executable(pm1_udp test/pm1_with_udp.cpp)
+target_link_libraries(pm1_udp pm1_linux)
+
+add_executable(g29_udp test/g29_with_udp.cpp)
+target_link_libraries(g29_udp g29)
+
+add_executable(pm1_with_g29 test/pm1_with_g29.cpp)
+target_link_libraries(pm1_with_g29 pm1_linux g29)
+
+add_executable(servo_test test/servo_test.cpp
+        app/serial_linux.h
+        app/serial_linux.cpp)
+
 endif ()
 
 endif ()
